@@ -1,3 +1,4 @@
+    ADDED: some nice sample useractions
     ADDED: PopularUrls was rewritten for a nice-like algorithm
     ADDED: Useractions in the menubar (need an update of krusaderui.rc)
     --architecture-- KChooseDir was rewritten. plz have a look at the code/email 
